2005-12-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* xorg/Makefile.am:
	* xorg/configure.ac:
	* xorg/hw/xfree86/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am: 
	Bugzilla #4809 <https://bugs.freedesktop.org/show_bug.cgi?id=4809>
	Patch #3908 <https://bugs.freedesktop.org/attachment.cgi?id=3908>
	xf8_32wid and cfb24 only need to be built on sparc

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.
	Update release string to 6.99.99.903 (i.e., 7.0 RC3).

2005-12-02  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/Makefile.am:
	* GL/mesa/X/Makefile.am:
	* GL/mesa/array_cache/Makefile.am:
	* GL/mesa/glapi/Makefile.am:
	* GL/mesa/main/Makefile.am:
	* GL/mesa/math/Makefile.am:
	* GL/mesa/shader/Makefile.am:
	* GL/mesa/shader/grammar/Makefile.am:
	* GL/mesa/shader/slang/Makefile.am:
	* GL/mesa/swrast/Makefile.am:
	* GL/mesa/swrast_setup/Makefile.am:
	* GL/mesa/tnl/Makefile.am:
	* XTrap/Makefile.am:
	* Xext/Makefile.am:
	* Xi/Makefile.am:
	* Xprint/Makefile.am:
	* Xprint/pcl/Makefile.am:
	* Xprint/ps/Makefile.am:
	* Xprint/raster/Makefile.am:
	* afb/Makefile.am:
	* cfb/Makefile.am:
	* cfb16/Makefile.am:
	* cfb24/Makefile.am:
	* cfb32/Makefile.am:
	* composite/Makefile.am:
	* configure.ac:
	* damageext/Makefile.am:
	* dbe/Makefile.am:
	* dix/Makefile.am:
	* fb/Makefile.am:
	* hw/dmx/Makefile.am:
	* hw/dmx/config/Makefile.am:
	* hw/dmx/glxProxy/Makefile.am:
	* hw/dmx/input/Makefile.am:
	* hw/vfb/Makefile.am:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/ddc/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/dixmods/extmod/Makefile.am:
	* hw/xfree86/dri/Makefile.am:
	* hw/xfree86/dummylib/Makefile.am:
	* hw/xfree86/exa/Makefile.am:
	* hw/xfree86/fbdevhw/Makefile.am:
	* hw/xfree86/i2c/Makefile.am:
	* hw/xfree86/int10/Makefile.am:
	* hw/xfree86/loader/Makefile.am:
	* hw/xfree86/os-support/bsd/Makefile.am: